# EMG-concentrated-current-sources

./: .gitignore  .zenodo.json  Cargo.toml  Makefile  README.md  docker-compose.yml  environment.yml  introduction.ipynb  py_update.bash  pyproject.toml  requirements.txt  setup.py
emg_hom_iso_unbound/: MUAP_firing_frequenzy.py  MUAP_trains.py  __init__.py  export_as_pandas.py  model.py  model_config.py  sim_infrastructure.py  tools.py
examples/: demo_one_Fiber.py  model_single_Muscle.py  model_test_MUAP_center_tracking.py  motor_unit_pool.py
notebook/: Dockerfile
src/: lib.rs
tests/: MUAP_firing_frequenzy_test.py  MUAP_trains_test.py  build_and_test.sh  model_config_test.py
tests/build_test/: Dockerfile
