[package]
name = "emg_hom_iso_unbound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "emg_hom_iso_unbound"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.19"
pyo3 = {version = "0.19.0", features = ["extension-module"]}
