[build-system]
# do i really need setuptools here?
requires = ["maturin>=1.3,<2.0", "setuptools"]
build-backend = "maturin"

[project]
name = "hom_iso_unbound"
version = "0.2.1"
license = {file = "LICENSE"}
authors = [
  {name = "Malte Mechtenberg"}
]
maintainers = [
  {name = "Malte Mechtenberg", email = "malte.mechtenberg@hsbi.de"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = [
  "dependencies"
]
[project.optional-dependencies]
test = [
  "pytest"
]

[tool.setuptools.dynamic]
dependencies = {file= ["requirements.txt"]}

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = 'emg_hom_iso_unbound.lib'
